--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json",
-  "ts-node": {
+    "extends": "@tsconfig/recommended/tsconfig.json",
+    "ts-node": {
+        "compilerOptions": {
+            "module": "commonjs"
+        }
+    },
     "compilerOptions": {
-      "module": "commonjs"
-    }
-  },
-  "compilerOptions": {
-    "declaration": true,
-    "moduleResolution": "node",
-    "module": "es2015"
-  },
-  "include": ["src/client/**/*"],
-  "exclude": ["node_modules"]
+        "declaration": true,
+        "moduleResolution": "node",
+        "module": "es2015"
+    },
+    "include": [
+        "src/client/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
